<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE xml>
<project xmlns="https://maven.apache.org/POM/4.0.0"
	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.10</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<groupId>it.eng.dome.revenue</groupId>
	<artifactId>engine</artifactId>
	<version>1.2.8</version>
	<name>Revenue Engine</name>
	<description>Revenue Engine for DOME project</description>

	<properties>
		<java.version>17</java.version>
		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<!-- Caching -->
		<dependency>
			<groupId>org.ehcache</groupId>
			<artifactId>ehcache</artifactId>
		</dependency>

		<!-- Brokerage Utils dependencies -->
		<dependency>
			<groupId>it.eng.dome.brokerage</groupId>
			<artifactId>brokerage-utils</artifactId>
			<version>[2.2.0, 2.3.0)</version>
		</dependency>
		
		<!-- TMF620 Product Catalog Management -->
		<dependency>
			<groupId>it.eng.dome.tmforum-sdk</groupId>
			<artifactId>tmf620-v4</artifactId>
			<version>[2.1.0, 2.2.0)</version>
		</dependency>
		<!-- TMF629 Customer Management -->
		<dependency>
			<groupId>it.eng.dome.tmforum-sdk</groupId>
			<artifactId>tmf629-v4</artifactId>
			<version>[2.1.0, 2.2.0)</version>
		</dependency>
		<!-- TMF632 Party Management -->
		<dependency>
			<groupId>it.eng.dome.tmforum-sdk</groupId>
			<artifactId>tmf632-v4</artifactId>
			<version>[2.1.0, 2.2.0)</version>
		</dependency>
		<!--  TMF637 Product Inventory Management  -->
		<dependency>
			<groupId>it.eng.dome.tmforum-sdk</groupId>
			<artifactId>tmf637-v4</artifactId>
			<version>[2.1.0, 2.2.0)</version>
		</dependency>
		<!--  TMF651 Agreement Management  -->
		<dependency>
			<groupId>it.eng.dome.tmforum-sdk</groupId>
			<artifactId>tmf651-v4</artifactId>
			<version>[2.1.0, 2.2.0)</version>
		</dependency>	
		<!-- TMF678 Customer Bill -->
		<dependency>
			<groupId>it.eng.dome.tmforum-sdk</groupId>
			<artifactId>tmf678-v4</artifactId>
			<version>[2.1.0, 2.2.0)</version>
		</dependency>
		
		<!-- Springdoc OpenAPI dependency -->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.1.0</version>
		</dependency>
		<!-- Lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<!-- Spring Boot Actuator -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
	</dependencies>

	<build>
		<finalName>revenue-engine</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.34</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>build-info</id>
						<goals>
							<goal>build-info</goal>
						</goals>
						<configuration>
							<additionalProperties>
								<version>${project.version}</version>
							</additionalProperties>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	
	<profiles>
	    <profile>
	        <id>generate-rest-apis</id>
	        <activation>
	            <activeByDefault>false</activeByDefault>
	        </activation>
	        <properties>
	            <spring-boot.run.arguments>--rest_api_docs.generate_md=true</spring-boot.run.arguments>
	        </properties>
	    </profile>
	</profiles>

</project>
